--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "puppeteer": "^20.1.0"
   }
 }
